--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -93,7 +93,6 @@ body {
   font-family: var(--montserrat);
   font-weight: 400;
   overflow: visible !important;
-  
 }
 
 .active {
@@ -115,6 +114,7 @@ body {
     width: 32px;
     background: var(--color-red);
     margin-right: 8px;
+    margin-left: 8px;
     margin-bottom: 2px;
   }
 }
