--- a/src/components/Header/burger.module.scss
+++ b/src/components/Header/burger.module.scss
@@ -1,46 +1,47 @@
-@import '../../styles/config/config';
+@import "../../styles/config/config";
 
 .burger {
+  width: 28px;
+  height: 17px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 11;
+  grid-column: 2/3;
+  align-self: center;
+  justify-self: end;
+  outline: none;
+
+  @include media-query($large-up) {
+    display: none;
+  }
+
+  &__line {
     width: 28px;
-    height: 17px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    z-index: 11;
-    grid-column: 2/3;
-    align-self: center;
-    justify-self: end;
+    height: 2px;
+    background: var(--color-black);
+    border-radius: 2px;
+    transform-origin: left center;
+    transition: all 0.3s ease;
 
-    @include media-query($large-up) {
-        display: none;
+    &:first-of-type {
+      .open & {
+        transform: rotate(44deg) translate3d(-2px, 0, 0);
+      }
     }
 
-    &__line {
-        width: 28px;
-        height: 2px;
-        background: var(--color-black);
-        border-radius: 2px;
-        transform-origin: left center;
-        transition: all 0.3s ease;
+    &:nth-of-type(2) {
+      width: 17px;
 
-        &:first-of-type {
-            .open & {
-                transform: rotate(44deg) translate3d(-2px,0,0);
-            }
-        }
-
-        &:nth-of-type(2) {
-            width: 17px;
-
-            .open & {
-                opacity: 0;
-            }
-        }
-
-        &:last-of-type {
-            .open & {
-                transform: rotate(-46deg) translate3d(-4px, 0, 0);
-            }
-        }
+      .open & {
+        opacity: 0;
+      }
     }
+
+    &:last-of-type {
+      .open & {
+        transform: rotate(-46deg) translate3d(-4px, 0, 0);
+      }
+    }
+  }
 }
