--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -128,28 +128,5 @@ body {
   box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.2);
 }
 
-.react-pdf {
-  &__Document {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: all 400ms ease-in-out;
-  }
-
-  &__Page {
-    max-width: 100%;
-    box-shadow: 1px 0 18px rgba(0, 0, 0, 0.1);
-    margin: 1em;
-
-    canvas {
-      max-width: 100%;
-      height: auto !important;
-    }
-  }
-
-  &__message {
-    padding: 20px;
-    color: white;
-  }
+.MuiPaper-root {
 }
-
