fix images got rss feed pulled

--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -27,7 +27,7 @@
   grid-column: 1/2;
   grid-row: 1/2;
   overflow-y: hidden;
-  background-image: url("../../../images/home-hero.jpg");
+  background-image: url("/images/home-hero.jpg");
 }
 
 .homeHeroContent {
