--- a/src/components/OurBeliefsSection/home-beliefs.module.scss
+++ b/src/components/OurBeliefsSection/home-beliefs.module.scss
@@ -10,9 +10,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    &__img {
-      //   background-image: url("../../assets//images/beliefs-bg.jpg");
-    }
+    background-image: url("/images/beliefs-bg.jpg");
   }
 
   &__wrapper {
