--- a/src/components/FeaturedMessages/message.module.scss
+++ b/src/components/FeaturedMessages/message.module.scss
@@ -14,7 +14,7 @@
   &__logo {
     cursor: pointer;
     grid-column: 1/2;
-    grid-row: 2/3;
+    grid-row: 1/2;
     svg {
       height: 40px;
       margin-top: 4px;
@@ -31,15 +31,16 @@
   }
   &__wrapper {
     // margin-left: 57px;
+
     &__title {
       grid-row: auto;
-      grid-column: 1/3;
+      grid-column: 2/2;
       font-size: 18px;
       font-family: var(--montserrat);
       font-weight: 600;
       margin: 0px;
       @include media-query($medium-up) {
-        grid-column: 2/3;
+        grid-column: 2/2;
         font-size: 30px;
         align-self: center;
         margin-left: 5rem;
@@ -49,9 +50,8 @@
 }
 
 .message__info {
-  display: flex;
-  grid-row: 2/3;
-  grid-column: 2/3;
+  grid-row: 2/2;
+  grid-column: 2/2;
   align-self: center;
   color: var(--color-n5);
   margin-top: 10px;
@@ -59,13 +59,25 @@
     margin-left: 5rem;
     margin-top: 0;
   }
-  &__by {
+  &__description {
+    grid-row: 2/2;
+    grid-column: 2/2;
+    align-self: center;
     font-size: 12px;
     margin: 0px;
+    color: var(--color-n5);
+    margin-top: 10px;
+    @include media-query($medium-up) {
+      // margin-left: 5rem;
+      margin-top: 0;
+    }
   }
-  &__published {
+
+  &__link {
     font-size: 12px;
     margin: 0px;
+    text-decoration: none;
+    color: var(--color-red);
   }
   .divider {
     height: 18px;
