--- a/src/components/Contacts/form.module.scss
+++ b/src/components/Contacts/form.module.scss
@@ -1,60 +1,83 @@
-@import '../../styles/config/config';
-
+@import "../../styles/config/config";
+.thankyou {
+  border: 2px solid var(--color-success);
+  padding: 4px;
+  margin-top: 16px;
+  p {
+    font-family: var(--montserrat);
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 1.01px;
+    margin: 0;
+  }
+}
+.failMessage {
+  border: 2px solid var(--color-error);
+  padding: 4px;
+  margin-top: 16px;
+  p {
+    font-family: var(--montserrat);
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 1.01px;
+    margin: 0;
+  }
+}
 .container {
-    .title {
-        font-family: var(--montserrat);
-        font-size: 16px;
-        font-weight: 500;
-        letter-spacing: 1.01px;
+  .title {
+    font-family: var(--montserrat);
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 1.01px;
+  }
+  .form {
+    &__wrap {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 16px;
+
+      label {
+        margin-bottom: 6px;
+      }
+
+      input {
+        height: 58px;
+        padding-left: 4px;
+        outline: none;
+      }
+
+      textarea {
+        resize: none;
+        padding-left: 4px;
+        outline: none;
+      }
     }
-    .form {
-        &__wrap {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 16px;
-
-            label {
-                margin-bottom: 6px;
-            }
-
-            input {
-                height: 58px;
-                padding-left: 4px;
-                outline: none;
-            }
-
-            textarea {
-                resize: none;
-                padding-left: 4px;
-                outline: none;
-            }
-        }
-    }
+  }
 }
 
 .error {
-    color: var(--color-red);
-    font-size: 12px;
-    padding-left: 6px;
-    margin-top: 2px;
+  color: var(--color-red);
+  font-size: 12px;
+  padding-left: 6px;
+  margin-top: 8px;
 }
 
 .button {
-    outline: none;
-    width: 100%;
-    height: 58px;
-    border: none;
-    background-color: var(--color-black);
-    color: var(--color-red);
-    text-transform: uppercase;
-    font-weight: 800;
-    letter-spacing: 1.1px;
-    margin-top: 56px;
-    transition: all 250ms ease-in-out;
-    cursor: pointer;
+  outline: none;
+  width: 100%;
+  height: 58px;
+  border: none;
+  background-color: var(--color-black);
+  color: var(--color-red);
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 1.1px;
+  margin-top: 16px;
+  transition: all 250ms ease-in-out;
+  cursor: pointer;
 }
 .button:hover {
-    border: 1px solid var(--color-red);
-    color: var(--color-black);
-    background-color: var(--color-white);
+  border: 1px solid var(--color-red);
+  color: var(--color-black);
+  background-color: var(--color-white);
 }
