--- a/src/components/MeetingTimes/meeting-times.module.scss
+++ b/src/components/MeetingTimes/meeting-times.module.scss
@@ -27,6 +27,7 @@
     h3 {
       position: relative;
       display: inline-block;
+      margin-bottom: 0;
 
       &::before {
         content: "";
