--- a/src/components/Articles/timelines.module.scss
+++ b/src/components/Articles/timelines.module.scss
@@ -29,49 +29,10 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  margin: 64px 5rem 0 5rem;
+  margin: 40px 5rem 0 5rem;
   padding: 1.5rem;
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
-
-  &:hover {
-    border-left: 1px solid var(--color-red);
-    border-right: 1px solid var(--color-red);
-  }
-
-  &::before {
-    content: "";
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    z-index: -1;
-    width: 0%;
-    height: 1px;
-    background: var(--color-red);
-    box-shadow: inset 0px 0px 0px var(--color-red);
-    display: block;
-    -webkit-transition: all 0.4s cubic-bezier(0.5, 0.24, 0, 1);
-    transition: all 0.4s cubic-bezier(0.5, 0.24, 0, 1);
-  }
-  &:hover::before {
-    width: 100%;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    z-index: -1;
-    width: 0%;
-    height: 1px;
-    background: var(--color-red);
-    -webkit-transition: all 0.4s cubic-bezier(0.5, 0.24, 0, 1);
-    transition: all 0.4s cubic-bezier(0.5, 0.24, 0, 1);
-  }
-  &:hover::after {
-    width: 100%;
-  }
 
   .paragraph {
     font-size: 16px;
@@ -93,5 +54,25 @@
     position: absolute;
     width: 100%;
     height: 100%;
+  }
+}
+
+.info {
+  display: flex;
+
+  .author {
+    font-size: 14px;
+    margin-right: 12px;
+  }
+
+  .date {
+    font-size: 14px;
+  }
+  .divider {
+    height: 28px;
+    width: 1px;
+    background-color: var(--color-black);
+    margin-right: 12px;
+    align-self: center;
   }
 }
