--- a/src/components/Beliefs/principle.module.scss
+++ b/src/components/Beliefs/principle.module.scss
@@ -1,9 +1,11 @@
 @import "../../styles/config/config";
 
 .container {
-  margin: 16px;
+  width: calc(100vw - 48px);
+  margin: 0 auto;
   @include media-query($medium-up) {
-    margin: 165px;
+    max-width: 1110px;
+    margin: 0 auto;
   }
 }
 
@@ -13,9 +15,10 @@
   grid-template-rows: 1fr;
   border-top: 1px solid var(--color-n3);
   margin-top: 64px;
-  
+  padding: 25px 0;
+
   @include media-query($medium-up) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 40% 1fr;
     grid-gap: 20px;
     padding: 50px 0;
   }
@@ -24,13 +27,12 @@
     .number {
       color: var(--color-n3);
       font-size: 24px;
-      margin: 32px 0 0 0;
+      margin: 0;
       font-family: var(--playfair);
     }
 
     .principle {
       font-size: 24px;
-      margin: 8px 0 12px 0;
       @include media-query($medium-up) {
         width: 400px;
       }
@@ -47,5 +49,6 @@
 .paragraph {
   @include media-query($medium-up) {
     line-height: 26px;
+    font-size: 16px;
   }
 }
