--- a/src/components/FeaturedMessages/featured.module.scss
+++ b/src/components/FeaturedMessages/featured.module.scss
@@ -21,6 +21,15 @@
       font-size: 36px;
     }
   }
+
+  &__link {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 52px;
+    a {
+      width: 170px;
+    }
+  }
 }
 
 .player {
