--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -28,6 +28,7 @@
   grid-row: 1/2;
   overflow-y: hidden;
   background-image: url("/images/home-hero.jpg");
+  background-size: contain;
 }
 
 .homeHeroContent {
