--- a/src/components/OurBeliefsSection/home-beliefs.module.scss
+++ b/src/components/OurBeliefsSection/home-beliefs.module.scss
@@ -11,6 +11,7 @@
     width: 100%;
     height: 100%;
     background-image: url("/images/beliefs-bg.jpg");
+    background-size: cover;
   }
 
   &__wrapper {
