--- a/src/components/Contacts/form.module.scss
+++ b/src/components/Contacts/form.module.scss
@@ -1,15 +1,16 @@
 @import "../../styles/config/config";
 
 .thankyou {
-  border: 2px solid var(--color-success);
-  padding: 4px;
-  margin-top: 16px;
-  p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  h1 {
     font-family: var(--montserrat);
-    font-size: 16px;
     font-weight: 500;
-    letter-spacing: 1.01px;
-    margin: 0;
+    line-height: 1.4;
+    text-align: center;
+    width: 70%;
   }
 }
 
