--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -1,28 +1,35 @@
-@import '../../styles/config/config';
+@import "../../styles/config/config";
 
 .footer {
-    padding: 50px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.901);
+  padding: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.901);
 
-    &__info {
-        margin: 1rem 0 3rem 0;
+  &__info {
+    margin: 5rem 0 3rem 0;
 
-        p {
-            color: var(--color-white);
-            text-align: center;
-            font-family: var(--montserrat);
-            letter-spacing: 1.2px;
-            font-size: 16px;
-            margin-top: 5rem;
-        }
-
-        &__address {
-            opacity: 0.6;
-            width: 180px;
-            margin: 0 auto;
-        }
+    p {
+      color: var(--color-white);
+      text-align: center;
+      font-family: var(--montserrat);
+      letter-spacing: 1.2px;
+      font-size: 16px;
+      margin-top: 5rem;
     }
+    a {
+      color: var(--color-white);
+      text-align: center;
+      font-family: var(--montserrat);
+      letter-spacing: 1.2px;
+      font-size: 16px;
+    }
+
+    &__address {
+      opacity: 0.6;
+      width: 180px;
+      margin: 0 auto;
+    }
+  }
 }
