--- a/src/components/Header/header-nav.module.scss
+++ b/src/components/Header/header-nav.module.scss
@@ -42,6 +42,9 @@
     text-align: left;
     text-transform: uppercase;
     margin: 24px;
+    @include media-query($medium-up) {
+      font-size: 14px;
+    }
 
     &::before {
       content: "";
